--- a/report.html
+++ b/report.html
@@ -1585,22 +1585,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,108470],[],[[4,0,1,0,[],[1,208,108261],[]]],[],[1,1,1,1]];
+window.output["suite"] = [1,2,3,0,[],[1,0,108919],[],[[4,0,1,0,[],[1,390,108528],[]]],[],[1,1,1,1]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Test","*C:\\Automation\\DSS\\testcases\\test.robot","*testcases/test.robot","*TC_01"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Test","*C:\\Automation\\testcases\\test.robot","*testcases/test.robot","*TC_01"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:48","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:01:48","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:01:48","fail":0,"id":"s1","label":"Test","name":"Test","pass":1}]];
+window.output["stats"] = [[{"elapsed":"00:01:49","fail":0,"label":"Critical Tests","pass":1},{"elapsed":"00:01:49","fail":0,"label":"All Tests","pass":1}],[],[{"elapsed":"00:01:49","fail":0,"id":"s1","label":"Test","name":"Test","pass":1}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1603938929248;
+window.output["baseMillis"] = 1603956575877;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 108483;
+window.output["generated"] = 108928;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
